TangoTasker blog post

--- a/app/templates/_layout.jinja
+++ b/app/templates/_layout.jinja
@@ -11,7 +11,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@terrillo" />
     <meta name="twitter:creator" content="@terrillo" />
-    <meta name="twitter:url" content="https://terrillo.com/" />
+    <meta name="twitter:url" content="https://terrillo.com{{ request.path }}" />
     <meta name="twitter:title" content="{{ SEO.title }}" />
     <meta name="twitter:description" content="{{ SEO.description }}" />
 
@@ -24,6 +24,7 @@
     <meta property="og:description" content="{{ SEO.description }}" />
     <meta property="og:site_name" content="Terrillo Walls" />
     <meta property="og:url" content="https://terrillo.com{{ request.path }}" />
+    <meta name="fediverse:creator" content="@terrillo@mastodon.social" />
 
     {% if SEO.image %}
     <meta name="og:image" content="https://terrillo.com/static/images/{{ SEO.image }}" />
@@ -53,10 +54,7 @@
         href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Roboto+Mono:wght@300&family=Roboto+Serif:opsz,wght@8..144,400;8..144,700&family=Roboto:ital,wght@0,400;0,700;1,100&display=swap"
         rel="stylesheet" />
 
-    <!-- UIkit JS -->
-    <script src="/static/vendor/uikit.min.js"></script>
-
-
+    {% if request.path == "/" %}
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -69,11 +67,9 @@
         "url": "https://terrillo.com"
       }
     </script>
+    {% endif %}
 
-
-    <!-- Fathom - beautiful, simple website analytics -->
     <script src="https://cdn.usefathom.com/script.js" data-site="EOHZTGQS" defer></script>
-    <!-- / Fathom -->
 
 </head>
 
@@ -106,15 +102,13 @@
                 <a href="https://www.youtube.com/channel/UC3uyZ4xqUCGbMP6IVfPQ7Ng"
                     class="f6 dib ph2 link mid-gray dim">YouTube</a>
                 <a href="https://www.linkedin.com/in/terrillo-walls" class="f6 dib ph2 link mid-gray dim">LinkedIn</a>
+                <a href="https://bsky.app/profile/terrillo.com" class="f6 dib ph2 link mid-gray dim">Bluesky</a>
             </div>
         </footer>
     </div>
 
-    <!-- Ion Icons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="/static/vendor/ionicons.js"></script>
-
+    <!-- JS -->
+    <script src="/static/vendor/uikit.min.js"></script>
 
 </body>
-
 </html>
