--- a/app/templates/_layout.jinja
+++ b/app/templates/_layout.jinja
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="{{ SEO.description }}" />
 
     {% if SEO.image %}
-    <meta name="twitter:image" content="https://terrillo.com/static/images/{{ SEO.image }}" />
+    <meta name="twitter:image" content="https://terrillo.com/{{ SEO.image }}" />
     {% endif %}
 
     <!-- Open Graph -->
@@ -27,7 +27,7 @@
     <meta name="fediverse:creator" content="@terrillo@mastodon.social" />
 
     {% if SEO.image %}
-    <meta name="og:image" content="https://terrillo.com/static/images/{{ SEO.image }}" />
+    <meta name="og:image" content="https://terrillo.com/{{ SEO.image }}" />
     <meta property="og:image:height" content="900" />
     <meta property="og:image:width" content="900" />
     {% endif %}
